Lab4/src/main/java/code/recognizer/GeneratorParser.java
// Generated from java-escape by ANTLR 4.11.1
package code.recognizer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GeneratorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, Regexp=14, CodeInsert=15, NonTermID=16, 
		TokenID=17, TransID=18, INDEX=19, WS=20, Unknown=21;
	public static final int
		RULE_generator = 0, RULE_importLine = 1, RULE_importSource = 2, RULE_grammarLine = 3, 
		RULE_lineRule = 4, RULE_nonTermDef = 5, RULE_argType = 6, RULE_resType = 7, 
		RULE_nonTermRules = 8, RULE_nonTermRule = 9, RULE_nonTermRuleElement = 10, 
		RULE_transCall = 11, RULE_argSeq = 12, RULE_resSeq = 13, RULE_seqInScope = 14, 
		RULE_elemInScope = 15, RULE_anyScope = 16, RULE_tokenDef = 17, RULE_tokenMode = 18, 
		RULE_transDef = 19, RULE_argIdSeq = 20, RULE_resIdSeq = 21, RULE_idSeqInScope = 22, 
		RULE_importKeyword = 23, RULE_grammarKeyword = 24, RULE_command = 25, 
		RULE_skipCommand = 26, RULE_hideCommand = 27, RULE_id = 28;
	private static String[] makeRuleNames() {
		return new String[] {
                "code/generator", "importLine", "importSource", "grammarLine", "lineRule",
			"nonTermDef", "argType", "resType", "nonTermRules", "nonTermRule", "nonTermRuleElement", 
			"transCall", "argSeq", "resSeq", "seqInScope", "elemInScope", "anyScope", 
			"tokenDef", "tokenMode", "transDef", "argIdSeq", "resIdSeq", "idSeqInScope", 
			"importKeyword", "grammarKeyword", "command", "skipCommand", "hideCommand", 
			"id"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'.'", "'#'", "'@'", "':'", "'('", "','", "')'", "'->'", 
			"'import'", "'grammar'", "'skip'", "'hide'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "Regexp", "CodeInsert", "NonTermID", "TokenID", "TransID", 
			"INDEX", "WS", "Unknown"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GeneratorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GeneratorContext extends ParserRuleContext {
		public GrammarLineContext grammarLine() {
			return getRuleContext(GrammarLineContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GeneratorParser.EOF, 0); }
		public List<ImportLineContext> importLine() {
			return getRuleContexts(ImportLineContext.class);
		}
		public ImportLineContext importLine(int i) {
			return getRuleContext(ImportLineContext.class,i);
		}
		public List<LineRuleContext> lineRule() {
			return getRuleContexts(LineRuleContext.class);
		}
		public LineRuleContext lineRule(int i) {
			return getRuleContext(LineRuleContext.class,i);
		}
		public GeneratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterGenerator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitGenerator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitGenerator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GeneratorContext generator() throws RecognitionException {
		GeneratorContext _localctx = new GeneratorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_generator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(58);
				importLine();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			grammarLine();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 458752L) != 0) {
				{
				{
				setState(65);
				lineRule();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportLineContext extends ParserRuleContext {
		public ImportKeywordContext importKeyword() {
			return getRuleContext(ImportKeywordContext.class,0);
		}
		public ImportSourceContext importSource() {
			return getRuleContext(ImportSourceContext.class,0);
		}
		public ImportLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterImportLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitImportLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitImportLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportLineContext importLine() throws RecognitionException {
		ImportLineContext _localctx = new ImportLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			importKeyword();
			setState(74);
			importSource();
			setState(75);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportSourceContext extends ParserRuleContext {
		public List<TerminalNode> NonTermID() { return getTokens(GeneratorParser.NonTermID); }
		public TerminalNode NonTermID(int i) {
			return getToken(GeneratorParser.NonTermID, i);
		}
		public List<TerminalNode> TokenID() { return getTokens(GeneratorParser.TokenID); }
		public TerminalNode TokenID(int i) {
			return getToken(GeneratorParser.TokenID, i);
		}
		public ImportSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterImportSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitImportSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitImportSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportSourceContext importSource() throws RecognitionException {
		ImportSourceContext _localctx = new ImportSourceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importSource);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				_la = _input.LA(1);
				if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 196612L) != 0) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 196612L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GrammarLineContext extends ParserRuleContext {
		public GrammarKeywordContext grammarKeyword() {
			return getRuleContext(GrammarKeywordContext.class,0);
		}
		public TerminalNode TokenID() { return getToken(GeneratorParser.TokenID, 0); }
		public TerminalNode CodeInsert() { return getToken(GeneratorParser.CodeInsert, 0); }
		public GrammarLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterGrammarLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitGrammarLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitGrammarLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarLineContext grammarLine() throws RecognitionException {
		GrammarLineContext _localctx = new GrammarLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_grammarLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			grammarKeyword();
			setState(83);
			match(TokenID);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CodeInsert) {
				{
				setState(84);
				match(CodeInsert);
				}
			}

			setState(87);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineRuleContext extends ParserRuleContext {
		public NonTermDefContext nonTermDef() {
			return getRuleContext(NonTermDefContext.class,0);
		}
		public TokenDefContext tokenDef() {
			return getRuleContext(TokenDefContext.class,0);
		}
		public TransDefContext transDef() {
			return getRuleContext(TransDefContext.class,0);
		}
		public LineRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterLineRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitLineRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitLineRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineRuleContext lineRule() throws RecognitionException {
		LineRuleContext _localctx = new LineRuleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lineRule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NonTermID:
				{
				setState(89);
				nonTermDef();
				}
				break;
			case TokenID:
				{
				setState(90);
				tokenDef();
				}
				break;
			case TransID:
				{
				setState(91);
				transDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonTermDefContext extends ParserRuleContext {
		public TerminalNode NonTermID() { return getToken(GeneratorParser.NonTermID, 0); }
		public NonTermRulesContext nonTermRules() {
			return getRuleContext(NonTermRulesContext.class,0);
		}
		public ArgTypeContext argType() {
			return getRuleContext(ArgTypeContext.class,0);
		}
		public ResTypeContext resType() {
			return getRuleContext(ResTypeContext.class,0);
		}
		public NonTermDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTermDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterNonTermDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitNonTermDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitNonTermDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonTermDefContext nonTermDef() throws RecognitionException {
		NonTermDefContext _localctx = new NonTermDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nonTermDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(NonTermID);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(97);
				argType();
				}
			}

			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(100);
				resType();
				}
			}

			setState(103);
			nonTermRules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgTypeContext extends ParserRuleContext {
		public AnyScopeContext anyScope() {
			return getRuleContext(AnyScopeContext.class,0);
		}
		public ArgTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterArgType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitArgType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitArgType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgTypeContext argType() throws RecognitionException {
		ArgTypeContext _localctx = new ArgTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__2);
			setState(106);
			anyScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResTypeContext extends ParserRuleContext {
		public AnyScopeContext anyScope() {
			return getRuleContext(AnyScopeContext.class,0);
		}
		public ResTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterResType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitResType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitResType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResTypeContext resType() throws RecognitionException {
		ResTypeContext _localctx = new ResTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_resType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__3);
			setState(109);
			anyScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonTermRulesContext extends ParserRuleContext {
		public List<NonTermRuleContext> nonTermRule() {
			return getRuleContexts(NonTermRuleContext.class);
		}
		public NonTermRuleContext nonTermRule(int i) {
			return getRuleContext(NonTermRuleContext.class,i);
		}
		public NonTermRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTermRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterNonTermRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitNonTermRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitNonTermRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonTermRulesContext nonTermRules() throws RecognitionException {
		NonTermRulesContext _localctx = new NonTermRulesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_nonTermRules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(111);
				match(T__4);
				setState(112);
				nonTermRule();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonTermRuleContext extends ParserRuleContext {
		public List<NonTermRuleElementContext> nonTermRuleElement() {
			return getRuleContexts(NonTermRuleElementContext.class);
		}
		public NonTermRuleElementContext nonTermRuleElement(int i) {
			return getRuleContext(NonTermRuleElementContext.class,i);
		}
		public NonTermRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTermRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterNonTermRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitNonTermRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitNonTermRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonTermRuleContext nonTermRule() throws RecognitionException {
		NonTermRuleContext _localctx = new NonTermRuleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_nonTermRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 491520L) != 0) {
				{
				{
				setState(118);
				nonTermRuleElement();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonTermRuleElementContext extends ParserRuleContext {
		public TerminalNode NonTermID() { return getToken(GeneratorParser.NonTermID, 0); }
		public TerminalNode TokenID() { return getToken(GeneratorParser.TokenID, 0); }
		public TransCallContext transCall() {
			return getRuleContext(TransCallContext.class,0);
		}
		public TerminalNode CodeInsert() { return getToken(GeneratorParser.CodeInsert, 0); }
		public NonTermRuleElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTermRuleElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterNonTermRuleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitNonTermRuleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitNonTermRuleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonTermRuleElementContext nonTermRuleElement() throws RecognitionException {
		NonTermRuleElementContext _localctx = new NonTermRuleElementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nonTermRuleElement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NonTermID:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(NonTermID);
				}
				break;
			case TokenID:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				match(TokenID);
				}
				break;
			case TransID:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				transCall();
				}
				break;
			case CodeInsert:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				match(CodeInsert);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TransCallContext extends ParserRuleContext {
		public TerminalNode TransID() { return getToken(GeneratorParser.TransID, 0); }
		public ArgSeqContext argSeq() {
			return getRuleContext(ArgSeqContext.class,0);
		}
		public ResSeqContext resSeq() {
			return getRuleContext(ResSeqContext.class,0);
		}
		public TransCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterTransCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitTransCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitTransCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TransCallContext transCall() throws RecognitionException {
		TransCallContext _localctx = new TransCallContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_transCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(TransID);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(131);
				argSeq();
				}
			}

			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(134);
				resSeq();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgSeqContext extends ParserRuleContext {
		public SeqInScopeContext seqInScope() {
			return getRuleContext(SeqInScopeContext.class,0);
		}
		public ArgSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argSeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterArgSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitArgSeq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitArgSeq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgSeqContext argSeq() throws RecognitionException {
		ArgSeqContext _localctx = new ArgSeqContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_argSeq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__2);
			setState(138);
			seqInScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResSeqContext extends ParserRuleContext {
		public SeqInScopeContext seqInScope() {
			return getRuleContext(SeqInScopeContext.class,0);
		}
		public ResSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resSeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterResSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitResSeq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitResSeq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResSeqContext resSeq() throws RecognitionException {
		ResSeqContext _localctx = new ResSeqContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_resSeq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__3);
			setState(141);
			seqInScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeqInScopeContext extends ParserRuleContext {
		public List<ElemInScopeContext> elemInScope() {
			return getRuleContexts(ElemInScopeContext.class);
		}
		public ElemInScopeContext elemInScope(int i) {
			return getRuleContext(ElemInScopeContext.class,i);
		}
		public SeqInScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seqInScope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).enterSeqInScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeneratorListener ) ((GeneratorListener)listener).exitSeqInScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeneratorVisitor ) return ((GeneratorVisitor<? extends T>)visitor).visitSeqInScope(this);
			else return visitor.visitChildren(this);
		}
	}
